// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitledCard should render correctly with default props 1`] = `
<div>
  <article
    class="flex flex-col gap-4"
    data-testid="titled-card-test-id"
  >
    <h3
      class="text-xl leading-[150%] font-bold lg:text-2xl lg:leading-[120%]"
    >
      Title
    </h3>
    <div
      class="flex flex-col gap-3"
    >
      <p>
        This is a titled card component.
      </p>
    </div>
  </article>
</div>
`;

exports[`TitledCard should render correctly with green title 1`] = `
<div>
  <article
    class="flex flex-col gap-4"
    data-testid="titled-card-test-id"
  >
    <h3
      class="text-xl leading-[150%] font-bold lg:text-2xl lg:leading-[120%] text-text-green"
    >
      Title
    </h3>
    <div
      class="flex flex-col gap-3"
    >
      <p>
        This is a titled card component.
      </p>
    </div>
  </article>
</div>
`;

exports[`TitledCard should render multiple paragraphs correctly 1`] = `
<div>
  <article
    class="flex flex-col gap-4"
    data-testid="titled-card-test-id"
  >
    <h3
      class="text-xl leading-[150%] font-bold lg:text-2xl lg:leading-[120%] text-text-green"
    >
      Title
    </h3>
    <div
      class="flex flex-col gap-3"
    >
      <p>
        29 березня 2018 року батальйон був створений у складі 119-ї бригади, яка об’єднала 43 загони територіальної оборони Чернігівщини.
      </p>
      <p>
        Ще в мирний час ми проводили регулярні навчання, щоб бути готовими до будь-яких викликів. В 2018 році проводились тактичні навчання “Північна фортеця - 2018”, які були організовані з використанням досвіду застосування військових частин територіальної оборони країн Балтії та скандинавських держав. У 2021 році понад 2 000 резервістів бригади, включно з нашими бійцями, взяли участь у масштабних навчаннях, готуючись до оборони регіону.
      </p>
    </div>
  </article>
</div>
`;
